--- a/environment_release.yml
+++ b/environment_release.yml
@@ -6,9 +6,9 @@ dependencies:
   - python=3.10
   - pip
   - pip:
-      - datasets==1.18.0
-      - huggingface-hub==0.2.1
-      - numpy==1.22.1
+      - datasets
+      - huggingface-hub
+      - numpy
       - sentencepiece
       - tokenizers
       - torch
